// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`spark reducer should handle SET_ERROR 1`] = `
Immutable.Map {
  "status": Immutable.Map {
    "isError": true,
    "isSettingUserStatus": false,
  },
  "items": Immutable.Map {},
  "error": Object {
    "id": "abc-123",
    "mock": true,
  },
}
`;

exports[`spark reducer should handle SET_PRESENCE_STATUS 1`] = `
Immutable.Map {
  "status": Immutable.Map {
    "isError": false,
    "isSettingUserStatus": false,
  },
  "items": Immutable.Map {
    "abc-123": Immutable.Map {
      "status": "dnd",
    },
  },
  "error": null,
}
`;

exports[`spark reducer should handle UPDATE_MODULE_STATUS 1`] = `
Immutable.Map {
  "status": Immutable.Map {
    "isError": false,
    "isSettingUserStatus": true,
  },
  "items": Immutable.Map {},
  "error": null,
}
`;

exports[`spark reducer should return initial state 1`] = `
Immutable.Map {
  "status": Immutable.Map {
    "isError": false,
    "isSettingUserStatus": false,
  },
  "items": Immutable.Map {},
  "error": null,
}
`;
